Fix money field width in transaction lines form on Firefox
FossilOrigin-Name: 788294994930cee4e55f4d0d1d5478cb07c84066bf266b621d1685a6a9e361e9

--- a/src/www/admin/static/handheld.css
+++ b/src/www/admin/static/handheld.css
@@ -12,7 +12,7 @@ input[type=number], input[type=color],
 input[type=email], input[type=file], input[type=url], input[type=month],
 input[type=password], input[type=range], input[type=search], input[type=tel],
 textarea, select, .input-list, .file-selector, input[type=text]:not([data-input]) {
-    min-width: 0 !important;
+    min-width: 0;
     max-width: calc(100% - 2em);
     width: calc(95% - 2em);
 }
