--- a/src/www/admin/static/styles/10-accounting.css
+++ b/src/www/admin/static/styles/10-accounting.css
@@ -21,8 +21,8 @@ b.money {
     max-width: 10em;
 }
 
-.transaction-lines input[type=text] {
-    min-width: 0 !important;
+.transaction-lines input.money {
+    min-width: 3.5rem !important;
 }
 
 nav.acc-year {
